--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,55 @@
-# Core dependencies
-requests>=2.31.0
-aiohttp>=3.9.0
-pyOpenSSL>=23.3.0
-cryptography>=41.0.0
-
-# Web crawling and browser automation
-playwright>=1.40.0
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
-
-# TLS and certificate handling
-certifi>=2023.11.17
-
-# Database
-sqlalchemy>=2.0.0
-flask>=3.0.0
-flask-sqlalchemy>=3.1.0
-flask-cors>=4.0.0
-
-# Configuration
-pyyaml>=6.0.1
-toml>=0.10.2
-
-# Reporting
-jinja2>=3.1.2
-# weasyprint>=60.0  # PDF generation (optional, requires C++ build tools on Windows)
-markdown>=3.5.0
-
-# Security scanning
-python-whois>=0.8.0
-
-# Statistical analysis
-numpy>=1.26.0
-scipy>=1.11.0
-
-# CLI interface
-click>=8.1.7
-rich>=13.7.0
-
-# Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-
-# CI/CD
-pygithub>=2.1.0  # For GitHub integration
-
-# Utilities
-python-dateutil>=2.8.2
-colorama>=0.4.6
-
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+attrs==25.4.0
+beautifulsoup4==4.14.2
+blinker==1.9.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+colorama==0.4.6
+cryptography==46.0.3
+Flask==3.1.2
+flask-cors==6.0.1
+Flask-SQLAlchemy==3.1.1
+frozenlist==1.8.0
+greenlet==3.2.4
+idna==3.11
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==6.0.2
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+multidict==6.7.0
+numpy==2.3.4
+packaging==25.0
+playwright==1.55.0
+pluggy==1.6.0
+propcache==0.4.1
+pycparser==2.23
+pyee==13.0.0
+PyGithub==2.8.1
+Pygments==2.19.2
+PyJWT==2.10.1
+PyNaCl==1.6.0
+pyOpenSSL==25.3.0
+pytest==8.4.2
+pytest-asyncio==1.2.0
+python-dateutil==2.9.0.post0
+python-whois==0.9.6
+PyYAML==6.0.3
+requests==2.32.5
+rich==14.2.0
+scipy==1.16.3
+six==1.17.0
+soupsieve==2.8
+SQLAlchemy==2.0.44
+toml==0.10.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
+yarl==1.22.0
